--- a/L03.1/pom.xml
+++ b/L03.1/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.otus</groupId>
-    <artifactId>L02.1</artifactId>
+    <artifactId>L03.1</artifactId>
     <version>1.0</version>
 
-    <name>L02.1</name>
-    <description>homework for L02.1</description>
+    <name>L03.1</name>
+    <description>homework for L03.1</description>
 
     <developers>
         <developer>
@@ -24,13 +24,13 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
     </properties>
 
-    <dependencies>
+    <!--dependencies>
         <dependency>
             <groupId>org.openjdk.jol</groupId>
             <artifactId>jol-core</artifactId>
             <version>0.9</version>
         </dependency>
-    </dependencies>
+    </dependencies-->
 
     <build>
         <finalName>${project.name}</finalName>
@@ -66,7 +66,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>ru.otus.l021.Main</mainClass>
+                            <mainClass>ru.otus.L031.MyArrayListTest</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -75,12 +75,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-
 </project>
 
