--- a/L12.1/pom.xml
+++ b/L12.1/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>ru.otus</groupId>
     <artifactId>L12.1</artifactId>
-    <version>2018-08</version>
+    <version>2019-04-30</version>
 
     <name>L12.1</name>
     <description>homework for L12.1</description>
@@ -26,10 +26,11 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <lombok.version>1.18.6</lombok.version>
         <mysql.version>8.0.15</mysql.version>
+        <h2.version>1.4.199</h2.version>
         <hibernate.version>5.4.2.Final</hibernate.version>
         <javax.xml.bind.version>2.4.0-b180830.0359</javax.xml.bind.version>
         <freemarker.version>2.3.28</freemarker.version>
-        <jetty.version>9.4.9.v20180320</jetty.version>
+        <jetty.version>9.4.11.v20180605</jetty.version>
         <gson.version>2.8.5</gson.version>
         <junit.version>4.12</junit.version>
         <rest.assured.version>2.9.0</rest.assured.version>
@@ -48,6 +49,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
