--- a/L15.1/src/main/webapp/WEB-INF/web.xml
+++ b/L15.1/src/main/webapp/WEB-INF/web.xml
@@ -1,34 +1,44 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-
-<web-app>
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+        http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+        version="3.0">
 
     <display-name>L15.1</display-name>
-    <description>Example of war file</description>
+    <description>war with spring</description>
 
-    <servlet>
-        <servlet-name>timeServlet</servlet-name>
-        <servlet-class>ru.otus.servlets.TimeServlet</servlet-class>
-    </servlet>
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath:applicationContext.xml</param-value>
+    </context-param>
 
-    <servlet-mapping>
-        <servlet-name>timeServlet</servlet-name>
-        <url-pattern>/time</url-pattern>
-    </servlet-mapping>
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
 
     <filter>
         <filter-name>securityFilter</filter-name>
         <filter-class>ru.otus.servlets.SecurityFilter</filter-class>
     </filter>
-
     <filter-mapping>
         <filter-name>securityFilter</filter-name>
         <url-pattern>/admin_page/*</url-pattern>
     </filter-mapping>
+
+    <servlet>
+        <servlet-name>timeServlet</servlet-name>
+        <servlet-class>ru.otus.servlets.TimeServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>timeServlet</servlet-name>
+        <url-pattern>/time</url-pattern>
+    </servlet-mapping>
+
     <servlet>
         <servlet-name>logonServlet</servlet-name>
         <servlet-class>ru.otus.servlets.LogonServlet</servlet-class>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>logonServlet</servlet-name>
         <url-pattern>/logon</url-pattern>
@@ -38,7 +48,6 @@
         <servlet-name>logonErrorServlet</servlet-name>
         <servlet-class>ru.otus.servlets.LogonErrorServlet</servlet-class>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>logonErrorServlet</servlet-name>
         <url-pattern>/logon_error</url-pattern>
@@ -48,19 +57,15 @@
         <servlet-name>logoutServlet</servlet-name>
         <servlet-class>ru.otus.servlets.LogoutServlet</servlet-class>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>logoutServlet</servlet-name>
         <url-pattern>/logout</url-pattern>
     </servlet-mapping>
 
-
-
     <servlet>
         <servlet-name>adminServlet</servlet-name>
         <servlet-class>ru.otus.servlets.AdminPageServlet</servlet-class>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>adminServlet</servlet-name>
         <url-pattern>/admin_page</url-pattern>
@@ -70,7 +75,6 @@
         <servlet-name>saveUserServlet</servlet-name>
         <servlet-class>ru.otus.servlets.SaveUserServlet</servlet-class>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>saveUserServlet</servlet-name>
         <url-pattern>/admin_page/saveuser</url-pattern>
@@ -80,7 +84,6 @@
         <servlet-name>findUserServlet</servlet-name>
         <servlet-class>ru.otus.servlets.FindUserServlet</servlet-class>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>findUserServlet</servlet-name>
         <url-pattern>/admin_page/finduser</url-pattern>
@@ -90,7 +93,6 @@
         <servlet-name>listOfUsersServlet</servlet-name>
         <servlet-class>ru.otus.servlets.ListOfUsersServlet</servlet-class>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>listOfUsersServlet</servlet-name>
         <url-pattern>/admin_page/listofusers</url-pattern>
@@ -101,4 +103,3 @@
     </welcome-file-list>
 
 </web-app>
-
