--- a/L09.1/pom.xml
+++ b/L09.1/pom.xml
@@ -19,16 +19,18 @@
 
     <properties>
         <project.build.sourceEncodings>UTF-8</project.build.sourceEncodings>
-        <java.version>11</java.version>
+        <java.version>1.10</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <logback.version>1.3.0-alpha4</logback.version>
+        <json.version>1.1.1</json.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>com.googlecode.json-simple</groupId>
-            <artifactId>json-simple</artifactId>
-            <version>1.1.1</version>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -36,6 +38,4 @@
             <version>2.8.5</version>
         </dependency>
     </dependencies>
-
-
 </project>
