--- a/L08.1/pom.xml
+++ b/L08.1/pom.xml
@@ -24,6 +24,14 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.5.0-M1</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <finalName>${project.name}</finalName>
         <plugins>
@@ -59,7 +67,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>ru.otus.l081.atm.ATM</mainClass>
+                            <mainClass>ru.otus.l081.atm.AtmMain</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
