--- a/L08.1/pom.xml
+++ b/L08.1/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>junit-jupiter</artifactId>
             <version>5.5.0-M1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
+        </dependency>
     </dependencies>
 
     <build>
